@@ -1,3 +1,9 @@
+2015-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff/tif_jpeg.c: Applied patch by Räisä Olli to assure that
+	client_data is initialized to a known value, and to report an
+	error on two memory allocation failures.
+
 2015-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* CMakeLists.txt: Applied patch by Roger Leigh to fix libtiffxx
